--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@ html {
     display: none;
 }
 
+#page4{
+    display: none;
+}
+
+#page5{
+    display: none;
+}
+
 .components {
     display: grid;
     grid-gap: 2rem;
@@ -276,7 +284,7 @@ p{
 .links ul {
     display: flex;
     justify-content: space-between;
-    width: 55%;
+    width: 75%;
     margin: 0 auto;
 }
 
@@ -361,7 +369,24 @@ a:hover {
     animation-delay: 1500ms;
 }
 
+.dot {
+    height: 25px;
+    width: 25px;
+    background-color: rgb(20,4,245);
+    border-radius: 50%;
+    display: inline-block;
+    padding-bottom: 50%;
+  }
 
+
+.vl {
+    border-left: 6px solid rgb(20, 4, 245);
+    height: 500px;
+    position: absolute;
+    left: 80%;
+    margin-left: -3px;
+    top: 0;
+  }
 
 /* Smartphones (portrait) ----------- */
 @media only screen and (max-width : 700px) {
